--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,9 +1,13 @@
 <form action="/create" method="POST">
-  <h2>Create todo</h2>
+  <h2>Create menu</h2>
 
-  <div class="input-field">
+  <form class="input-field">
+    <span>Menu title
     <input type="text" name="title">
-    <label>Todo title</label>
+    </span>
+    <span>Price
+    <input type="text" name="price">
+    </span>
   </div>
 
   <button type="submit" class="btn">Create</button>
