--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,11 +1,13 @@
 {{> head}}
 
 <body>
-  {{> navbar}}
+  <header>
+    {{> navbar}}
+  </header>
 
-  <div class="container">
+  <main>
     {{{ body }}}
-  </div>
+  </main>
 </body>
 
 </html>
