--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,20 +1,42 @@
-<nav class="blue darken-4">
-  <div class="nav-wrapper">
-    <a href="/" class="brand-logo">Todos</a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
+<nav>
+  <a href="/" class="logo">LOGO</a>
+  <ul style="flex-direction: row">
+    {{#if isAuthenticated}}
+    {{#if isIndex}}
+    <li class="active"><a href="/">Menu</a></li>
+    {{else}}
+    <li><a href="/">Menu</a></li>
+    {{/if}}
 
-      {{#if isIndex}}
-      <li class="active"><a href="/">Todos</a></li>
-      {{else}}
-      <li><a href="/">Todos</a></li>
-      {{/if}}
+    {{#if isCart}}
+    <li class="active"><a href="/create">Cart</a></li>
+    {{else}}
+    <li><a href="/cart">Cart</a></li>
+    {{/if}}
+    <li><a href="/logout">Logout</a></li>
 
-      {{#if isCreate}}
-      <li class="active"><a href="/create">Create</a></li>
-      {{else}}
-      <li><a href="/create">Create</a></li>
-      {{/if}}
 
-    </ul>
-  </div>
+    {{!-- {{#if isCreate}}
+    <li class="active"><a href="/create">Create</a></li>
+    {{else}}
+    <li><a href="/create">Create</a></li>
+    {{/if}} --}}
+
+    
+    {{else}}
+    {{#if isLogin}}
+    <li class="active"><a href="/login">Login</a></li>
+    {{else}}
+    <li><a href="/login">Login</a></li>
+    {{/if}}
+
+    {{#if isCreate}}
+    <li class="active"><a href="/registration">Sign up</a></li>
+    {{else}}
+    <li><a href="/registration">Sign up</a></li>
+    {{/if}}
+
+    {{/if}}
+
+  </ul>
 </nav>
