--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="icon" href="favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="../favicon.ico?v=1.1">
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&family=Rubik+Puddles&display=swap" rel="stylesheet"/>
