--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,5 +1,5 @@
 <form action="/create" method="POST">
-  <h2>Create menu</h2>
+  <h2 class="page-title">Create menu</h2>
 
   <form class="input-field">
     <span>Menu title
