--- a/public/index.css
+++ b/public/index.css
@@ -18,14 +18,35 @@ header {
   width: auto;
   margin: 0 auto;
   max-width: 1100px;
-  padding: 0 50px;
+  padding: 20px 50px;
 
   @media screen and (max-width: 820px) {
-    padding: 0 24px;
+    padding: 20px 24px;
     max-width: 782px;
   }
 }
 
+.logo {
+  width: 60px;
+}
+.page-title {
+  font-size: 40px;
+  text-align: center;
+
+  margin: 10px auto;
+}
+.info-ps {
+  text-align: center;
+}
+
+.product-image {
+  width: 200px;
+  margin-bottom: 25px;
+}
+
+.product-image.Burger {
+  margin-bottom: -20px;
+}
 
 button {
   border: none;
