--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,4 +1,4 @@
-<h2>Cart</h2>
+<h2 class="page-title">Cart</h2>
 
 {{#if menu.length }}
 <ul>
@@ -7,6 +7,7 @@
   <li class="menu">
     <form action="/inCartCartPage" method="POST">
       <label>
+        <img class="product-image {{title}}" src="/images/{{title}}.png" alt="img">
         <div>
           <span>In cart</span>
           {{#if inCart}}
@@ -16,7 +17,7 @@
           {{/if}}
         </div>
         <span>{{title}}</span>
-        <span>Price: {{price}}</span>
+        <span>Price: ${{price}}</span>
         <span>Amount: <input type="number" name="amount" min="1" max="20" value="{{amount}}"></span>
         <script>
           let totalAmount_{{ _id }} = {{ price }} * {{ amount }};
@@ -26,7 +27,7 @@ totalAmountElement.innerHTML = totalAmount_{{_id}};
 
           });
         </script>
-        <span>Total Price: <span id="totalAmount{{_id}}"></span></span>
+        <span>Total Price: $<span id="totalAmount{{_id}}"></span></span>
 
 
 
